--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=fzgLkv5nQZnA4vJTyzzgsdAiP5fsK4Im
 
-DB_HOST=TRA\SQL2017
-DB_DATABASE=TRA
-DB_USERNAME=portalman
+DB_HOST=TRA-EDMS\SQLTRA
+DB_DATABASE=TRANEW
+DB_USERNAME=sa
 DB_PASSWORD=portalman
 
 CACHE_DRIVER=file
